simlib/test/buffer_3/test.truth
<>  Trying to send data into the buffer
